--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello coursera</title>
+	<meta charset="utf-8">
+	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a great course! </h1>
+<h1 style=" color: green; font-size: 60px; text-align: center;"> THE BEST CHILDMINDER </h1>
+<h5 style=" color: pink; font-size: 20px; text-align: center;"> Nikoletta Rekasi </h5>
+	<section style="font-size: 40px; text-align: center;">
+	Site work in progress
+	</section>
+<footer>	
+	<p> Contact information: <a href="mailto:forzanivan@gmail.com"> forzanivan@gmail.com</a>.</p>
+</footer>
 </body>
 </html>
